--- a/download.html
+++ b/download.html
@@ -12,10 +12,12 @@
       <!-- Sidebar content -->
     </div>
     <div class="main-content">
-      <h1>Welcome to the Bookshop!</h1>
+      <h1>Welcome to Dawamu School Bookshop!</h1>
       <p>Your one-stop destination for all your reading needs. </p>
       <p>Download our app and enjoy the best experience on the go.</p>
       <a href="https://example.com/download-app" class="download-btn">Download the App</a>
+      <p>Or Check the main page Out</p>
+      <a href="main.html" class="download-btn">Main Page</a>
     </div>
   </div>
 </body>
