--- a/index.html
+++ b/index.html
@@ -3,25 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>School Library</title>
   <link rel="stylesheet" href="index.css">
+  <title>Document</title>
 </head>
 <body>
-  <div class="container">
-    <div class="sidebar">
-      <!-- Sidebar content -->
-    </div>
-    <div class="main-content">
-      <h1>Register Your User</h1>
-      <form id="registration-form">
-        <input type="text" id="username" placeholder="Enter username..." required minlength="8" maxlength="14">
-        <input type="password" id="password" placeholder="Enter password..." required minlength="8" maxlength="14">
-        <input type="password" id="password-confirm" placeholder="Confirm password..." required minlength="8" maxlength="14">
-        <button type="submit" class="register-btn">Register</button>
+    <div class="wrapper">
+      <form action="">
+        <h1>Login</h1>
+        <div class="input-box">
+          <input type="text" placeholder="Username" required>
+        </div>
+        <div class="input-box">
+          <input type="password" placeholder="Password" required>
+        </div>
+
+        <div class="remember-forgot">
+          <label><input type="checkbox">Remember me</label>
+          <a href="#">Forgot Password?</a>
+        </div>
+
+        <button type="submit" class="btn">Login</button>
+
+        <div class="register-link">
+          <p>Dont have an account?<a href="#">Register</a></p>
+        </div>
       </form>
-      <button class="signin-btn" onclick="redirectToLogin()">Already have an account? Sign in here</button>
     </div>
-  </div>
-  <script src="index.js"></script>
 </body>
 </html>
