--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
     .logo {
       width: 100px;
       height: 100px;
-      border-radius: 50%;
-      background-image: url('dawamu\ 4.png');
+      border-radius: 10px;
+      background-image: url('dawamu.png');
       background-size: cover;
       display: inline-block;
       margin: 20px;
+      padding: 70px;
     }
 
     .nav-links {
