--- a/paymentgateway.html
+++ b/paymentgateway.html
@@ -162,7 +162,7 @@
                     <h3 class="title">Payment</h3>
                     <div class="inputBox">
                         <label>Card Accepted:</label>
-                        <img src="cards.png" alt="credit/debit card image">
+                        <img src="images.png" alt="credit/debit card image">
                     </div>
                     <div class="inputBox">
                         <label for="cardName">Name On Card:</label>
