--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     body {
       font-family: 'Arial', sans-serif;
-      background-color: #0ebc3f,gray,black;
+      background-color: black;
       color: #fff;
       margin: 0;
       padding: 0;
@@ -23,7 +23,6 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-     
       background-size: cover;
       background-position: center;
     }
@@ -34,7 +33,7 @@
       text-align: center;
       padding: 20px;
       border-radius: 10px;
-      background-color: green,black,grey;
+      background-color: rgba(0, 128, 0, 0.8);
       backdrop-filter: blur(10px);
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     }
@@ -47,43 +46,70 @@
       background-size: cover;
       display: inline-block;
       margin: 20px;
-      padding: 70px;
     }
 
     .nav-links {
       list-style: none;
       display: flex;
+      flex-wrap: wrap;  /* Allows buttons to wrap on smaller screens */
       justify-content: center;
       margin-top: 20px;
+      padding: 0;
     }
 
     .nav-links li {
-      margin: 0 15px;
+      margin: 5px;  /* Reduce spacing for better fit */
     }
 
     .nav-links a {
       text-decoration: none;
       color: #fff;
-      font-size: 18px;
-      padding: 10px;
+      font-size: 16px;
+      padding: 10px 15px;
       border-radius: 5px;
       transition: background-color 0.3s ease;
+      display: block;
+      background-color: rgba(255, 255, 255, 0.2);
     }
 
     .nav-links a:hover {
       background-color: rgb(47, 255, 0);
-      transform: translateY(-10px);
+      transform: translateY(-3px);
     }
 
     h1 {
-      font-size: 36px;
-      margin-top: 30px;
-      color: #0ebc3f,black;
+      font-size: 28px;
+      margin-top: 20px;
     }
 
     p {
-      font-size: 20px;
-      margin-top: 20px;
+      font-size: 16px;
+      margin-top: 10px;
+    }
+
+    /* Mobile Responsive Design */
+    @media (max-width: 600px) {
+      .nav-links {
+        flex-direction: column; /* Stack items vertically */
+        align-items: center;
+      }
+
+      .nav-links li {
+        width: 100%;
+      }
+
+      .nav-links a {
+        width: 90%;
+        text-align: center;
+      }
+
+      h1 {
+        font-size: 24px; /* Reduce heading size */
+      }
+
+      p {
+        font-size: 14px;
+      }
     }
 
   </style>
@@ -91,7 +117,7 @@
 <body>
   <div class="container">
     <a href="#" class="logo"></a>
-    <h1 style="color: #0ebc3f,black;">DAWAMU SCHOOL BOOKSHOP</h1>
+    <h1>DAWAMU SCHOOL BOOKSHOP</h1>
   
     <ul class="nav-links">
       <li><a href="#">Home</a></li>
