--- a/contactus.html
+++ b/contactus.html
@@ -16,7 +16,7 @@
             <div class="section-header">
                <div class="container">
                   <h2>Contact Us</h2>
-                  <p>Here you can contact us and give us your feedback on what yothink about our website.</p>
+                  <p>Here you can contact us and give us your feedback on what you think about our website.</p>
                </div>
             </div>
 
