--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
         <div class="container">
             <h2>About Us</h2>
             <p>Welcome to Dawamu School Bookshop, your go-to place for all academic and leisure reading needs. Our mission is to provide a wide range of books to inspire and educate our students while fostering a love for reading.</p>
-            <p>Located within the vibrant community of Dawamu School, our online platform offers a browsing experience, making it easier for students and staff to find and purchase the books they need with just a few clicks.</p>
+            <p>Located within the vibrant community of Dawamu School, our online platform offers a browsing experience, making it easier for students and staff to find and purchase the books they need with just a few clicks, making the library digitalized and more efficient.</p>
             <div class="team">
                 <div class="team-member">
                    
@@ -173,7 +173,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2024 Dawamu School Bookshop. All rights reserved.</p>
+        <p>&copy; 2025 Dawamu School Bookshop. All rights reserved.</p>
     </footer>
     <script>
         function goBack() {
