--- a/about.html
+++ b/about.html
@@ -163,10 +163,10 @@
             <div class="team">
                 <div class="team-member">
                    
-                    <h3>Patrick Gichui & Arthur Gichuki</h3>
+                    <h3>Arthur Gichuki</h3>
                     <p>Founder & Developer</p>
-                    <h3>Lucas Amugune</h3>
-                    <p>Advisor</p>
+                    <h3>Patrick Gichuki</h3>
+                    <p>Coding helper</p>
                 </div>
                
             </div>
