--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
       width: 100px;
       height: 100px;
       border-radius: 10px;
-      background-image: url('dawamu.png');
+      background-image: url('bookshop logo.png');
       background-size: cover;
       display: inline-block;
       margin: 20px;
+      padding: 12px;
     }
 
     .nav-links {
