--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
   }
   
 </style>
-<body> <div class="go-back-btn"></div> <button onclick="goBack()">Go Back</button>
+<body> <div class="go-back-btn"><button onclick="goBack()">Go Back</button></div> 
   <script>
     function goBack() {
       window.history.back();
@@ -49,6 +49,8 @@
       <input type="submit" value="Login" class="submitBtn">
       <label for="" class="notMember">Not a member? <span><a href="#" class="signupLink">Sign Up.</a></span></label>
     </form>
+
+
     <form action="#" class="form signupForm inactive">
       <h1 class="title">Sign Up</h1>
       <div class="inputBox">
