--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
       text-align: center;
       padding: 20px;
       border-radius: 10px;
-      background-color: rgba(0, 128, 0, 0.8);
-      backdrop-filter: blur(10px);
+      background-color: rgba(11, 188, 11, 0.8), black,grey;
+      backdrop-filter: blur(5px);
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     }
 
     .logo {
+      background-position: center;
       width: 100px;
       height: 100px;
-      border-radius: 10px;
+      border-radius: 5px;
       background-image: url('bookshop logo.png');
       background-size: cover;
       display: inline-block;
-      margin: 20px;
       padding: 12px;
     }
 
@@ -121,7 +121,6 @@
     <h1>DAWAMU SCHOOL BOOKSHOP</h1>
   
     <ul class="nav-links">
-      <li><a href="#">Home</a></li>
       <li><a href="shop.html">Books</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contactus.html">Contact</a></li>
