--- a/form2.html
+++ b/form2.html
@@ -55,8 +55,8 @@
         </div>
 
         <div class="card">
-            <img src="50TPH01103.jpg" alt="Murray Reeve" class="profile-img">
-            <h2>Secondary Physics Form 2</h2>
+            <img src="images (9).jpeg" alt="Murray Reeve" class="profile-img">
+            <h2>Evolving World Form 2</h2>
             
             <div class="social-icons">
                 <i class="fab fa-instagram"></i>
@@ -68,8 +68,8 @@
         </div>
 
         <div class="card">
-            <img src="50TPH01103.jpg" alt="Murray Reeve" class="profile-img">
-            <h2>Secondary Physics Form 2</h2>
+            <img src="images (10).jpeg" alt="Murray Reeve" class="profile-img">
+            <h2>Kiswahili Kitukuzwe Kidato Cha 2</h2>
             
             <div class="social-icons">
                 <i class="fab fa-instagram"></i>
