--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
       <li><a href="about.html">About</a></li>
       <li><a href="contactus.html">Contact</a></li>
       <li><a href="signup.html">Sign Up</a></li>
+      <li><a href="eduvideos.html">Educational Videos</a></li>
     </ul>                       
 
     <h1>Welcome to Dawamu School Bookshop</h1>
