--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,7 @@
       <h1 class="title">Login</h1>
       <div class="inputBox">
         <i class='bx bx-envelope'></i>
-        <input type="email" placeholder="Enter your email" required>
+        <input type="email" placeholder="Enter your admission number" required>
       </div>
       <div class="inputBox">
         <i class='bx bx-lock-alt'></i>
@@ -55,7 +55,7 @@
       <h1 class="title">Sign Up</h1>
       <div class="inputBox">
         <i class='bx bx-envelope'></i>
-        <input type="email" placeholder="Enter your email" required>
+        <input type="email" placeholder="Enter your admission number" required>
       </div>
       <div class="inputBox">
         <i class='bx bx-lock-alt'></i>
