--- a/eduvideos.html
+++ b/eduvideos.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DLS Library Video Page</title>
+    <title>Dawamu Library Educational Videos</title>
     <link rel="stylesheet" href="eduvideos.css">
 </head>
 <body>
     <header>
-        <h1>EDUCATIONAL VIDEOS</h1>
-   
+        <h1>Educational Videos</h1>
+        <button onclick="goBack()" class="go-back-btn">Go Back</button>
     </header>
 
     <main>
@@ -17,23 +17,35 @@
             <h2>Featured Videos</h2>
             <div class="video-card">
                 <video controls>
-                    <source src="Microsoft Excel Lesson 1-3 _ Part 1 of 2 _ Spreadsheets _ Form 2.mp4" type="video/mp4">
+                    <source src="Excel for Beginners - The Complete Course.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-                <p>MICROSOFT EXCEL LESSON 1</p>
+                <p>Excel for Beginners - The Complete Course</p>
             </div>
             <div class="video-card">
                 <video controls>
-                    <source src="video2.mp4" type="video/mp4">
+                    <source src="FORM 4： ORGANIC CHEMISTRY II ( Chemical properties of Alkanols) (1).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-                <p>Video Title 2</p>
+                <p>Form 4: ORGANIC CHEMISTRY II (Chemical Properties of Alkanols)</p>
+            </div>
+            <div class="video-card">
+                <video controls>
+                    <source src="Nitrogen Cycle Ecology; Biology Form 3.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <p>Nitrogen Cycle Ecology Biology Form 3</p>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 DLS Library. All rights reserved.</p>
+        <p>&copy; 2025 Dawamu School Library. All rights reserved.</p>
     </footer>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
