--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       width: 90%;
       text-align: center;
       padding: 20px;
-      border-radius: 10px;
+      border-radius: 5%;
       background-color: rgba(11, 188, 11, 0.8), black,grey;
       backdrop-filter: blur(5px);
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
