--- a/shop.html
+++ b/shop.html
@@ -32,19 +32,19 @@
         </div>
 
         <div class="card">
-            <img src="MV5BMjA4YTU3ZjktZjg5YS00NWIyLWFhZTItMzY4YTk2MTMyNjJhXkEyXkFqcGc@._V1_.jpg" alt="Harry Potter and the Goblet of Fire(2005)" class="profile-img">
+            <img src="bookshop logo.png" alt="Harry Potter and the Goblet of Fire(2005)" class="profile-img">
             <h2>Form 2</h2>
            <a href="form2.html"><button class="btn follow">Browse</button></a>
         </div>
 
         <div class="card">
-            <img src="MV5BMjA4YTU3ZjktZjg5YS00NWIyLWFhZTItMzY4YTk2MTMyNjJhXkEyXkFqcGc@._V1_.jpg" alt="Harry Potter and the Goblet of Fire(2005)" class="profile-img">
+            <img src="bookshop logo.png" alt="Harry Potter and the Goblet of Fire(2005)" class="profile-img">
             <h2>Form 3</h2>
            <a href="form3.html"><button class="btn follow">Browse</button></a>
         </div>
 
         <div class="card">
-            <img src="MV5BMjA4YTU3ZjktZjg5YS00NWIyLWFhZTItMzY4YTk2MTMyNjJhXkEyXkFqcGc@._V1_.jpg" alt="Harry Potter and the Goblet of Fire(2005)" class="profile-img">
+            <img src="bookshop logo.png" alt="Harry Potter and the Goblet of Fire(2005)" class="profile-img">
             <h2>Form 4</h2>
            <a href="form4.html"><button class="btn follow">Browse</button></a>
         </div>
