--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
         }
 
         section.about h2 {
-            color: #ffeb3b;
+            color: #0d7f11;
             font-size: 2rem;
             margin-bottom: 20px;
         }
@@ -166,7 +166,7 @@
                     <h3>Arthur Gichuki</h3>
                     <p>Founder & Developer</p>
                     <h3>Patrick Gichuki</h3>
-                    <p>Coding helper</p>
+                    <p>Developer</p>
                 </div>
                
             </div>
