--- a/grade8.html
+++ b/grade8.html
@@ -23,7 +23,7 @@
                 <i class="fab fa-linkedin"></i>
                 <i class="fab fa-share-alt"></i>
             </div>
-            <a href="paymentgateway.html"><button class="btn follow">Take book</button></a>
+            <a href="paymentchosing.html"><button class="btn follow">Take book</button></a>
         </div>
 
       
@@ -38,7 +38,7 @@
                 <i class="fab fa-linkedin"></i>
                 <i class="fab fa-share-alt"></i>
             </div>
-            <a href="paymentgateway.html"><button class="btn follow">Take book</button></a>
+            <a href="paymentchosing.html"><button class="btn follow">Take book</button></a>
         </div>
 
         <div class="card">
@@ -51,7 +51,7 @@
                 <i class="fab fa-linkedin"></i>
                 <i class="fab fa-share-alt"></i>
             </div>
-            <a href="paymentgateway.html"><button class="btn follow">Take book</button></a>
+            <a href="paymentchosing.html"><button class="btn follow">Take book</button></a>
         </div>
 
         <div class="card">
@@ -64,7 +64,7 @@
                 <i class="fab fa-linkedin"></i>
                 <i class="fab fa-share-alt"></i>
             </div>
-            <a href="paymentgateway.html"><button class="btn follow">Take book</button></a>
+            <a href="paymentchosing.html"><button class="btn follow">Take book</button></a>
         </div>
 
         <div class="card">
@@ -77,7 +77,7 @@
                 <i class="fab fa-linkedin"></i>
                 <i class="fab fa-share-alt"></i>
             </div>
-            <a href="paymentgateway.html"><button class="btn follow">Take book</button></a>
+            <a href="paymentchosing.html"><button class="btn follow">Take book</button></a>
         </div>
     </div>
     <script>
